# QTxLights

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  launch.vs.json
src/: MainWindow.cpp  MainWindow.h  SequenceGrid.cpp  SequenceGrid.h  XsqFile.cpp  XsqFile.h  main.cpp
